# ICEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  portfile.cmake  vcpkg-configuration.json  vcpkg.json
cmake/: icengine-config.cmake.in
editor/: CMakeLists.txt  main.cpp
include/: ic.h  ic_app.h  ic_camera.h  ic_common.h  ic_components.h  ic_gameobject.h  ic_graphics.h  ic_keycodes.h  ic_layer.h  ic_log.h  ic_material.h  ic_renderer.h  ic_window.h  renderer.h
include/events/: ic_app_event.h  ic_event.h  ic_key_event.h
include/vulkan/: descriptors.h  pipelines.h  swap_chain.h  vulkan_device.h  vulkan_initializers.h  vulkan_renderer.h  vulkan_types.h  vulkan_util.h
resources/shaders/: CMakeLists.txt  default_lit_shader.frag  default_lit_shader.vert  default_shader.frag.spv  default_shader.vert  default_shader.vert.spv  default_unlit_shader.frag  default_unlit_shader.vert  lighting_headers.glsl
src/: CMakeLists.txt  engine.cpp  engine.hpp  ic_app.cpp  ic_camera.cpp  ic_components.cpp  ic_gameobject.cpp  ic_graphics.cpp  ic_layer.cpp  ic_log.cpp  ic_material.cpp  ic_renderer.cpp  ic_renderer.h  main.cpp
src/platform/: glfw_window.cpp  glfw_window.h
src/renderer/: ic_device.cpp  ic_device.hpp  ic_renderer.cpp  ic_renderer.hpp  ic_swap_chain.cpp  ic_swap_chain.hpp  ic_types.hpp  ic_window.cpp  ic_window.hpp  mesh.cpp  mesh.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_types.hpp  vk_window.cpp  vk_window.hpp
src/renderer/util/: images.cpp  images.hpp  initializers.cpp  initializers.hpp  pipeline_builder.cpp  pipeline_builder.hpp
src/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/vulkan/: descriptors.cpp  descriptors.h  pipelines.cpp  pipelines.h  swap_chain.cpp  swap_chain.h  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_constants.h  vulkan_device.cpp  vulkan_device.h  vulkan_initializers.cpp  vulkan_initializers.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_texture_manager.cpp  vulkan_texture_manager.h  vulkan_types.h  vulkan_util.cpp  vulkan_util.h
src/vulkan/shaders/: CMakeLists.txt  shadow_pass.frag  shadow_pass.vert
